fix alignment issue in ABSCH interim rpt view (#1359)

--- a/app/css/template.css
+++ b/app/css/template.css
@@ -1620,6 +1620,9 @@ div.recordDefault:hover {
     padding: 10px;
     background-color: #ffffff;
 }
+#Record .panel-body ul{
+    padding: 0;
+}
 #Record .km-value {
     margin-bottom: 5px;
 }
